RESOLVED FIXED30262
[Chromium] KURLGoogle's protocolIs barfs on input containing hyphens
https://bugs.webkit.org/show_bug.cgi?id=30262
Summary [Chromium] KURLGoogle's protocolIs barfs on input containing hyphens
Darin Fisher (:fishd, Google)
Reported 2009-10-09 14:54:50 PDT
[Chromium] KURLGoogle's protocolIs barfs on input containing hyphens
Attachments
v1 patch (1.16 KB, patch)
2009-10-09 14:57 PDT, Darin Fisher (:fishd, Google)
eric: review-
v2 patch (1.40 KB, patch)
2009-10-09 20:36 PDT, Darin Fisher (:fishd, Google)
eric: review+
Darin Fisher (:fishd, Google)
Comment 1 2009-10-09 14:57:48 PDT
Created attachment 40965 [details] v1 patch
Eric Seidel (no email)
Comment 2 2009-10-09 16:16:30 PDT
Comment on attachment 40965 [details] v1 patch Needs test case or explanation of why there is none in the ChangeLog.
Eric Seidel (no email)
Comment 3 2009-10-09 16:16:51 PDT
At least, I assume this is tesatable via a layout test?
Darin Fisher (:fishd, Google)
Comment 4 2009-10-09 19:48:54 PDT
(In reply to comment #3) > At least, I assume this is tesatable via a layout test? This assertion was getting hit via a Chrome UI test when I switched some code in Chromium's webkit/glue from using GURL to KURL. I think the assertion is plainly bogus. This is a case where a unit test would be superior to a layout test IMO since you'd be able to be certain that you are executing this code path. Also, I realized that this change would probably be better: - ASSERT(isASCIILower(*str)); + ASSERT(toASCIILower(*str) == *str);
Darin Fisher (:fishd, Google)
Comment 5 2009-10-09 20:36:04 PDT
Created attachment 40983 [details] v2 patch Now with a better solution and a better ChangeLog entry.
Darin Fisher (:fishd, Google)
Comment 6 2009-10-09 20:38:23 PDT
Unfortunately, I could not find a way to cause this code path to be reached with input that contains a hyphen. It is a code path that can only be reached in Chrome due to the way it uses WebCore. I'll add something to GKURL_unittest.cpp, which I plan to one day upstream to svn.webkit.org.
Darin Fisher (:fishd, Google)
Comment 7 2009-10-09 20:54:39 PDT
Eric Seidel (no email)
Comment 8 2009-10-09 22:04:09 PDT
Comment on attachment 40983 [details] v2 patch LGTM. Thanks.
Darin Fisher (:fishd, Google)
Comment 9 2009-10-10 06:54:31 PDT
Note You need to log in before you can comment on or make changes to this bug.